tests/semantic/valid/test_block_scope.src
fn main() -> void {
    int x = 1;
    {
        int y = 2;
        x = x + y;
    }
    x = x + 1;
}